--- a/css/theme-default/newMaster.css
+++ b/css/theme-default/newMaster.css
@@ -1371,9 +1371,11 @@ margin-left:10px;
 }
 .control-section-card
 {
-	width: 270px;
-    background: #f0f1f1;
+	width: auto;
+	display:inline-flex;
+    background:white;
     height: auto;
+	box-shadow: 0px 0px 10px 0px #80808099;
     padding: 5px 5px;
     text-align: center;
     border-radius: 4px;
