--- a/css/theme-default/newMaster.css
+++ b/css/theme-default/newMaster.css
@@ -1391,7 +1391,7 @@ margin-left:10px;
     display: inline-block;
     content: '';
     top: 18px;
-    border-left: 10px solid #f0f1f1;
+    border-left: 10px solid #ffffff;
     border-bottom: 10px solid #fbf7f700;
     border-top: 10px solid #f3eded00;
     right: 25px;
