--- a/css/theme-default/newMaster.css
+++ b/css/theme-default/newMaster.css
@@ -1604,9 +1604,10 @@ margin-left:10px;
 .m-t-minus-no{margin-top:0px !important;}
 /* minus marg on mobile= (m-o-m)****/
 .m-o-m-t-5{margin-top:-5px;}
-.m-o-m-t-10{margin-top:-10px;}
+.m-o-m-t-10{margin-top:-10px !important;}
 .m-o-m-t-15{margin-top:-15px;}
-.m-o-m-t-20{margin-top:-20px;} 
+.m-o-m-t-20{margin-top:-20px;}
+.m-o-m-t-24{margin-top:-24px;} 
  
 }
 
