--- a/css/theme-default/newMaster.css
+++ b/css/theme-default/newMaster.css
@@ -221,6 +221,10 @@
 .m-t-minus-15{margin-top:-15px;}
 .m-t-minus-20{margin-top:-20px;}
 .m-t-minus-24{margin-top:-24px;}
+.m-t-minus-30{margin-top:-30px;}
+.m-t-minus-35{margin-top:-35px;}
+.m-t-minus-40{margin-top:-40px;}
+.m-t-minus-45{margin-top:-45px;}
 .geneder-margin{margin-top: -24px;}
 .m-t-2{margin-top:2px;}
 .certificate-icon{
@@ -1067,7 +1071,7 @@ margin-left:10px;
 }
 .s-black{color:black;}
 .s-bold{font-weight:600;}
-.s-profile-padding-r-0{padding-right:1px;}
+.s-profile-padding-r-0{padding-right:0px;}
 .s-profile-padding-l-0{padding-left:0px;}
 .s-profile-cover-img
 { 
@@ -1572,6 +1576,79 @@ margin-left:10px;
 }
 .m-t-40-tdetails{margin-top: 40px;}
 
+/****** Subscription card style ********/
+/** sub=(subsription) **/
+.sub-card-head
+{
+	height: 100px;
+    padding: 15px 0px;
+}
+.sub-body-padding
+{
+ padding: 0px 16px 10px 16px !important;
+}
+.sub-body-padding-b
+{
+ padding: 0px 16px 0px 16px !important;
+}
+.sub-body-padding-sub-area
+{
+ padding:20px 0px !important;
+}
+.sub-box-radius{border-radius:10px !important;}
+.sub-card-head-radius{border-top-left-radius:10px !important;border-top-right-radius:10px !important;}
+.sub-price-section
+{
+	text-align:center;
+}
+.sub-price-section .price-block
+{
+    display: inline-block;
+    width: 90px;
+    height: 90px;
+	padding:28px 0px;
+    background: #f05510;
+    border-radius: 50%;
+	border: 2px solid white;
+}
+.price-text
+{
+    font-size: 16px;
+    color: white;
+	font-family:'Open Sans';
+}
+.sub-detail-text
+{
+  font-size: 14px;
+  font-family: "Open Sans"; 
+  color: rgb(153, 153, 173); 
+  text-align: left; 
+}
+
+.sub-description-block{padding: 0px 10px;}
+
+.sub-description-block .d-text
+{
+    font-size: 13px;
+    font-family: "Open Sans";
+    color: rgb(153, 153, 173);
+}
+.ribbin-section
+{
+	position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: 1;
+    width: 35px;
+	padding: 0px 5px 6px 0px;
+    border-top-left-radius: 10px;
+    border-bottom-right-radius: 25px;
+    /* ms-transform: rotate(-50deg); */
+    /* -webkit-transform: rotate(-50deg); */
+    /* transform: rotate(-50deg); */
+	background: white;
+    text-align: center;
+}
 
  @media screen and (max-width: 767px){
 	 .top-header-author {
