--- a/css/theme-default/newMaster.css
+++ b/css/theme-default/newMaster.css
@@ -1580,9 +1580,10 @@ margin-left:10px;
 /** sub=(subsription) **/
 .sub-card-head
 {
-	height: 100px;
+	height: 115px;
     padding: 15px 0px;
 }
+.sub-header-font{font-size:15px !important;}
 .sub-body-padding
 {
  padding: 0px 16px 10px 16px !important;
