--- a/css/theme-default/newMaster.css
+++ b/css/theme-default/newMaster.css
@@ -610,16 +610,17 @@ padding: 0px 10px !important;}
 }
 
 .add-batch{
-  border-radius: 19px;
-  font-size: 15px !important;
-  background-color: rgb(255, 255, 255);
-  box-shadow: 0px 0px 19px 0px #c3bdbd;
-  display:block;  
-  width: 190px;
-  height: 38px;
-  float:right;
-  color: rgb(83, 83, 83) !important;
-  padding: 5px !important;
+    border-radius: 19px;
+    font-size: 14px !important;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 0px 19px 0px #c3bdbd;
+    display: block;
+    width: 160px;
+    height: 31px;
+    line-height: 18px;
+    float: right;
+    color: rgb(83, 83, 83) !important;
+    padding: 5px !important;
 }
 .add-batch:hover,
 .add-batch:focus,
@@ -641,8 +642,8 @@ padding: 0px 10px !important;}
       display: flex !important;
     align-items: center;
     justify-content: center;
-  width: 33px;
-  height: 33px;
+  width: 25px;
+  height: 25px;
   float:right;
   margin-top:-3px;
   margin-right:-4px;  
@@ -1650,6 +1651,66 @@ margin-left:10px;
 	background: white;
     text-align: center;
 }
+/*========== Chetna Registration Form =============*/
+.form-padding{padding:10px 200px;}
+.form-heading
+{
+	display: inline-block;
+    width: 200px;
+    height: 35px;
+    line-height: 30px;
+    background: #1190e8;
+    margin-bottom: 40px;
+    border-radius: 2px;
+    color: white;
+    font-size: 18px;
+    font-family: Open sans;
+    box-shadow: 6px 6px 10px 0px #92c5e6;
+}
+.form-ribbin-section
+{
+	display: inline-block;
+    width: 100%;
+    height: 30px;
+    background: #1190e8;
+    color: white;
+    padding: 1px 10px;
+    border-radius: 3px;
+    font-size: 15px;
+    font-family: Open sans;
+    font-weight: 500;
+    box-shadow: 0px 5px 10px 0px #a9c3d6;
+}
+.form-label-text
+{
+	font-size: 14px;
+    color: black;
+    font-family: Open sans;
+    font-weight: 600;
+}
+.f-15{font-size:15px;}
+.rupee-bagage
+{
+	display: inline-block;
+    width: 50px;
+    height: 30px;
+    line-height: 28px;
+    background: #1190e8;
+    text-align: center;
+    border-radius: 25px;
+    color: white;
+    font-weight: 600;
+    font-family: Open sans;
+}
+.pay-btn
+{
+	float: right !important;
+    padding: 5px 15px !important;
+    font-size: 15px !important;
+    font-weight: 500 !important;
+}
+
+
 
  @media screen and (max-width: 767px){
 	 .top-header-author {
@@ -1710,7 +1771,8 @@ margin-left:10px;
 .m-o-m-t-15{margin-top:-15px;}
 .m-o-m-t-20{margin-top:-20px;}
 .m-o-m-t-24{margin-top:-24px;} 
-.m-t-40-tdetails{margin-top:0px;} 
+.m-t-40-tdetails{margin-top:0px;}
+.form-padding{padding:10px 10px;}
 }
 
 /*media 767 End Here ****/
@@ -1774,6 +1836,7 @@ margin-left:10px;
 .m-o-m-t-20{margin-top:-20px;} 
 .m-o-m-t-24{margin-top:-24px;}
 .no-minus-margin{margin-top:0px;}
+.form-padding{padding:10px 10px;}
 }
 /*media for ipad Pro only****/
 @media only screen and (min-device-width: 1024px) and (max-device-width: 1200px) {
@@ -1806,6 +1869,7 @@ margin-left:10px;
 }
 .m-o-m-t-24{margin-top:-24px;}
 .no-minus-margin{margin-top:0px;}
+.form-padding{padding:10px 10px;}
 }
 /**** Rating bars css*/
 /* Three column layout */
