--- a/css/theme-default/program-details.css
+++ b/css/theme-default/program-details.css
@@ -223,19 +223,18 @@
 	font-size:15px;
 	color: #9a9494;
 }
-.exam-icon
+.std-icon
 {
-	width: 25px;
-    height: 25px;
-    background: -webkit-linear-gradient(left,#ffffff 0%,#eff7f7 100%);
-    padding: 0px 4px;
-    line-height: 28px;
-    border-radius: 50%;
-    margin-top: 0px;
-    margin-right: 10px;
-    display: inline-block;
-    box-shadow: 0px 0px 8px 0px #1a1a1b80;
+	display: inline-block;
+    width: 35px;
+    height: 35px;
+    border-radius: 25px;
+    box-shadow: 0px 0px 10px 0px #006df059;
+	text-align: center;
+    padding: 2px 0px;
+	margin-right: 10px;
 }
+.d-flex{display:inline-flex;}
 .sponsor-block
 {
 	border: 1px solid #80808030;
@@ -294,7 +293,7 @@
     transform:translateX(-50%)
 }
 .program__content--parts ul li .part{
-    width:100%;
+    width:80%;
     bottom:.75rem;
     position:relative;
     padding-bottom:.75rem
