--- a/css/theme-default/program-details.css
+++ b/css/theme-default/program-details.css
@@ -845,8 +845,17 @@
 }
 @media (max-width:1180px){
     .nd-summary-data{
-        display:none
+        display: block;
+        width: 100%;
+		padding-left: 0rem;
     }
+	.on-overlay {
+    
+    height: 70rem;
+    display: inline-grid;
+    align-items: left;
+     
+}
 }
 .hero-data-wrapper{
     height:100%;
@@ -959,12 +968,15 @@
     flex-wrap:wrap
 }
 @media (max-width:1180px){
+	.contain {
+    height: 70rem;
+	}
     .content{
         float:left;
         display:block;
         margin-right:1.69491525%;
         width:100%;
-        text-align:center
+        text-align:left
     }
     .content:last-child{
         margin-right:0
@@ -974,6 +986,21 @@
         justify-content:space-around;
         padding-bottom:1em
     }
+	.container-section, .block {
+    padding: 10px;
+}
+.pro-img-right-section { 
+    width: 100%;
+    height: 100%;
+    right: 0;
+    top: -15px;
+}
+.img-pro { 
+    border-top-left-radius: 5px;
+}
+.program-block {
+    padding: 250px 12px 12px 12px;
+}
 }
 .content h1{
     margin-top:0;
@@ -1060,9 +1087,9 @@
 }
 @media (max-width:1180px){
     .sponsor{
-        align-items:center;
-        flex-wrap:wrap;
-        justify-content:space-around
+        align-items:left;
+        /* flex-wrap:wrap; */
+        /* justify-content:space-around */
     }
     .sponsor .affiliate-wrapper{
         padding:0
