--- a/css/theme-default/program-details.css
+++ b/css/theme-default/program-details.css
@@ -7,17 +7,21 @@
 .b-radius-5{border-radius:5px;}
 .pro-img-right-section
 {
-	position: absolute;
-    width: 350px;
-    height: 250px;
-    right: -9px;
-    top: -24px;     
+	position: relative;
+    width: 100%;
+    height: 260px;    
+}
+.sy-border
+{
+	border: 1px solid #80808036;
+    padding: 0px 10px;
+    border-radius: 5px;
 }
 .m-t-35{margin-top:35px;}
 .pro-img-block
 {
 	width:100%;
-	height:250px; 	 
+	height: 100%; 	 
 }
 .pro-detail-block
 {
@@ -28,6 +32,7 @@
 	width:100%;
 	height:100%;
 	border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
 }
 .program-heading
 {   
@@ -219,7 +224,8 @@
     display: inline-block;
     background-color: #fff; 
     box-shadow: 0px 5px 25px 0 rgba(46,61,73,.2);
-    border-radius: 10px;  
+    border-radius: 10px; 
+    width: 100%;	
 }
 .card-body-padding-exam-card{padding:10px 15px;}
 .exam-name
@@ -271,10 +277,10 @@
     .program__content{
         float:left;
         display:block;
-        width:67.79661%
+        width:100%
     }
     .program__content:last-child{
-        width:66.10169%
+        width:100%
     }
 }
 .program__content--term-prereq{
@@ -313,7 +319,7 @@
     transform:translateX(-50%)
 }
 .program__content--parts ul li .part{
-    width:80%;
+    width:100%;
     bottom:.75rem;
     position:relative;
     padding-bottom:.75rem
