--- a/css/theme-default/program-details.css
+++ b/css/theme-default/program-details.css
@@ -136,7 +136,7 @@
   color: #fff;
 }
 .c-default{color:#2e3d49;}
-.c-primary{color:#2196f3;}
+.c-primary{color:#2196f3 !important;}
 .f-size-small
 {
   font-size: 1.25rem;
@@ -225,7 +225,50 @@
     background-color: #fff; 
     box-shadow: 0px 5px 25px 0 rgba(46,61,73,.2);
     border-radius: 10px; 
-    width: 100%;	
+    width:45%;	
+}
+.hoverOn-syllabus{
+    position: absolute;
+    right: 0;
+    width: 53% !important;
+    top: 6px;
+	z-index: 10;
+}
+.hoverOn-syllabus:before {
+    position: absolute;
+    display: inline-block;
+    content: '';
+    top: 70px;
+    border-right: 12px solid #fffefe;
+    border-left: 12px solid transparent;
+    border-bottom: 12px solid transparent;
+    border-top: 12px solid transparent;
+    left: -24px;
+	 
+}
+.exam-numbering {
+    border-radius: 50%;
+    color: white;
+    font-size: 12px;
+    text-align: center;
+     
+    font-weight: 600;
+    background-color: rgb(31, 142, 250);
+    box-shadow: 0px 11px 16px 0px rgba(14, 21, 32, 0.17);
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    line-height: 18px;
+}
+.animated-hr {
+    background-image: -moz-linear-gradient( 0deg, rgb(255,255,255) 0%, rgb(229,234,238) 50%, rgb(255,255,255) 100%);
+    background-image: -webkit-linear-gradient( 0deg, rgb(255,255,255) 0%, rgb(229,234,238) 50%, rgb(255,255,255) 100%);
+    background-image: -ms-linear-gradient( 0deg, rgb(255,255,255) 0%, rgb(229,234,238) 50%, rgb(255,255,255) 100%);
+    width: 100%;
+    height: 2px;
+    margin-top: 10px;
+    border-top: 0;
+    margin-bottom: 10px;
 }
 .card-body-padding-exam-card{padding:10px 15px;}
 .exam-name
@@ -282,6 +325,7 @@
     .program__content:last-child{
         width:100%
     }
+	 
 }
 .program__content--term-prereq{
     margin-right:.5rem
