--- a/css/theme-default/program-details.css
+++ b/css/theme-default/program-details.css
@@ -1,14 +1,16 @@
 /*======== Program Details =========**/
 .program-block
 {
-  padding:35px 40px;
+  padding:35px 10px;
 }
-.pro-detail-p-r{padding-right:45%;}
+.pro-detail-p-r{padding-right:50%;}
 .b-radius-5{border-radius:5px;}
 .pro-img-right-section
 {
-	position: relative;
-    width: 100%;
+	position: absolute;
+	right:-9px;
+	top:-24px;
+    width: 50%;
     height: 260px;    
 }
 .sy-border
@@ -32,7 +34,7 @@
 	width:100%;
 	height:100%;
 	border-top-right-radius: 5px;
-    border-top-left-radius: 5px;
+    
 }
 .program-heading
 {   
@@ -313,7 +315,7 @@
 
 @media screen and (min-width:480px){
     .program__content{
-        padding:3.75rem
+       padding: 40px 10px;
     }
 }
 @media screen and (min-width:992px){
