--- a/css/theme-default/program-details.css
+++ b/css/theme-default/program-details.css
@@ -1,16 +1,14 @@
 /*======== Program Details =========**/
 .program-block
 {
-  padding:35px 10px;
+  padding:35px 40px;
 }
-.pro-detail-p-r{padding-right:50%;}
+.pro-detail-p-r{padding-right:45%;}
 .b-radius-5{border-radius:5px;}
 .pro-img-right-section
 {
-	position: absolute;
-	right:-9px;
-	top:-24px;
-    width: 50%;
+	position: relative;
+    width: 100%;
     height: 260px;    
 }
 .sy-border
@@ -34,7 +32,7 @@
 	width:100%;
 	height:100%;
 	border-top-right-radius: 5px;
-    
+    border-top-left-radius: 5px;
 }
 .program-heading
 {   
@@ -315,7 +313,7 @@
 
 @media screen and (min-width:480px){
     .program__content{
-       padding: 40px 10px;
+        padding:3.75rem
     }
 }
 @media screen and (min-width:992px){
@@ -1223,8 +1221,4 @@ video{
 .nanodegree-hero-banner .button--primary, .nanodegree-hero-banner  .button--primary, .nanodegree-hero-banner .cta-button, .nanodegree-hero-banner  .cta-button{
     font-size:.9375rem
 }
-.required:after {
-    content: "*";
-    font-weight: bold;
-    color: red;
-}
+
