--- a/css/theme-default/program-details.css
+++ b/css/theme-default/program-details.css
@@ -1221,4 +1221,27 @@ video{
 .nanodegree-hero-banner .button--primary, .nanodegree-hero-banner  .button--primary, .nanodegree-hero-banner .cta-button, .nanodegree-hero-banner  .cta-button{
     font-size:.9375rem
 }
-
+.process-circle
+{
+	 border-radius: 50%;
+    color: white;
+    font-size: 12px;
+    text-align: center;
+    font-weight: 600;
+    background-color: rgb(31, 142, 250);
+    box-shadow: 0px 11px 16px 0px rgba(14, 21, 32, 0.17);
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    line-height: 18px;
+}
+.process-circle:after
+{
+	content: "";
+    position: absolute;
+    border-left:2px solid #1f8efa;
+    z-index: 1;
+	height: 80%;
+    left: 24px;
+    top: 20px;
+}
