--- a/css/theme-default/program-details.css
+++ b/css/theme-default/program-details.css
@@ -1,15 +1,5 @@
 /*======== Program Details =========**/
-.program-block
-{
-  padding:35px 40px;
-}
-.pro-detail-p-r{padding-right:45%;}
-.b-radius-5{border-radius:5px;}
-.heading-pro-s
-{
-	width:40%;
-	float:left;
-}
+
 .dropi-section
 {
 	float:right;
@@ -21,10 +11,19 @@
     padding: 0px 10px !important;
     border-radius: 5px;
 }
+.program-block
+{
+  padding:35px 20px;
+}
+.sylbs-details{float: right;}
+.pro-detail-p-r{padding-right:50%;}
+.b-radius-5{border-radius:5px;}
 .pro-img-right-section
 {
-	position: relative;
-    width: 100%;
+	position: absolute;
+	right:15px;
+	top:0px;
+    width: 48%;
     height: 260px;    
 }
 .sy-border
@@ -48,7 +47,7 @@
 	width:100%;
 	height:100%;
 	border-top-right-radius: 5px;
-    border-top-left-radius: 5px;
+    
 }
 .program-heading
 {   
@@ -329,7 +328,7 @@
 
 @media screen and (min-width:480px){
     .program__content{
-        padding:3.75rem
+       padding: 40px 20px;
     }
 }
 @media screen and (min-width:992px){
@@ -1237,27 +1236,8 @@ video{
 .nanodegree-hero-banner .button--primary, .nanodegree-hero-banner  .button--primary, .nanodegree-hero-banner .cta-button, .nanodegree-hero-banner  .cta-button{
     font-size:.9375rem
 }
-.process-circle
-{
-	 border-radius: 50%;
-    color: white;
-    font-size: 12px;
-    text-align: center;
-    font-weight: 600;
-    background-color: rgb(31, 142, 250);
-    box-shadow: 0px 11px 16px 0px rgba(14, 21, 32, 0.17);
-    display: inline-block;
-    width: 20px;
-    height: 20px;
-    line-height: 18px;
-}
-.process-circle:after
-{
-	content: "";
-    position: absolute;
-    border-left:2px solid #1f8efa;
-    z-index: 1;
-	height: 80%;
-    left: 24px;
-    top: 20px;
+.required:after {
+    content: "*";
+    font-weight: bold;
+    color: red;
 }
