--- a/css/theme-default/program-details.css
+++ b/css/theme-default/program-details.css
@@ -1,14 +1,29 @@
 /*======== Program Details =========**/
+
+.dropi-section
+{
+	float:right;
+	width:60%;
+}
+.dropi-pro
+{
+	border: 1px solid #2196f35c !important;
+    padding: 0px 10px !important;
+    border-radius: 5px;
+}
 .program-block
 {
-  padding:35px 40px;
+  padding:35px 20px;
 }
-.pro-detail-p-r{padding-right:45%;}
+.sylbs-details{float: right;}
+.pro-detail-p-r{padding-right:50%;}
 .b-radius-5{border-radius:5px;}
 .pro-img-right-section
 {
-	position: relative;
-    width: 100%;
+	position: absolute;
+	right:15px;
+	top:0px;
+    width: 48%;
     height: 260px;    
 }
 .sy-border
@@ -32,7 +47,7 @@
 	width:100%;
 	height:100%;
 	border-top-right-radius: 5px;
-    border-top-left-radius: 5px;
+    
 }
 .program-heading
 {   
@@ -313,7 +328,7 @@
 
 @media screen and (min-width:480px){
     .program__content{
-        padding:3.75rem
+       padding: 40px 20px;
     }
 }
 @media screen and (min-width:992px){
@@ -1221,107 +1236,8 @@ video{
 .nanodegree-hero-banner .button--primary, .nanodegree-hero-banner  .button--primary, .nanodegree-hero-banner .cta-button, .nanodegree-hero-banner  .cta-button{
     font-size:.9375rem
 }
-.process-circle
-{
-	 border-radius: 50%;
-    color: white;
-    font-size: 12px;
-    text-align: center;
-    font-weight: 600;
-    background-color: rgb(31, 142, 250);
-    box-shadow: 0px 11px 16px 0px rgba(14, 21, 32, 0.17);
-    display: inline-block;
-    width: 20px;
-    height: 20px;
-    line-height: 18px;
-}
-.process-circle:after
-{
-	content: "";
-    position: absolute;
-    border-left:2px solid #1f8efa;
-    z-index: 1;
-	height: 80%;
-    left: 24px;
-    top: 20px;
-}
-/*========== Program listing style ========*/
-.pro-list
-{
-	border: 1px solid #2196f3;
-}
-.pro-img-section
-{
-	width:100%;
-	height:185px;
-}
-.p--img
-{
-	width: 100%;
-    height: 100%;
-}
-.pro-title-padding{padding:5px 8px;}
-.pro-title-description{padding:5px 8px;}
-.pro-button-padding{padding:10px 8px;}
-.pro-title
-{
-	font-size:16px;
-	font-weight:600;
-}
-.pro-description
-{
-	font-size:12px;
-	font-weight:600;
-}
-.pro-detail-text
-{
-	font-size:15px;
-	font-weight:400;
-}
-.pro-pricing-block
-{
-	display: inline-block;
-    width: 68px;
-    height: 35px;
-    background: #9bcf60;
-    text-align: center;
-    line-height: 32px;
-}
-.pro-price-text{color:#fff;font-size:15px;}
-.p-left{padding-left:0px;}
-.plus-icon-color
-{
-	color: white !important;
-    font-size: 16px !important;
-    margin-right: 10px;
-}
-.pencil-color
-{
-	color: black !important;
-    font-size: 16px !important;
-    margin-right: 10px;
-}
-.m-b-20
-{
-	margin-bottom:20px;
-}
-.pro-search-box
-{
-    
-   border-top: 1px solid #8080804d !important;
-   border-bottom: 1px solid #8080804d !important;
-   border-left: 1px solid #8080804d !important;
-   border-right:0;
-   padding: 0px 10px !important;
-}
-.pro-search-icon
-{
-   background:white !important;
-   padding: 5.5px 10px !important;
-   margin-left: -10px !important;
-   border-top: 1px solid #8080804d !important;
-   border-bottom: 1px solid #8080804d !important;
-   border-left:0;
-   border-right:1px solid #8080804d !important;
-    
+.required:after {
+    content: "*";
+    font-weight: bold;
+    color: red;
 }
