--- a/css/theme-default/program-details.css
+++ b/css/theme-default/program-details.css
@@ -1304,9 +1304,9 @@ video{
 	width: 100%;
     height: 100%;
 }
-.pro-title-padding{padding:5px 8px;}
-.pro-title-description{padding:5px 8px;}
-.pro-button-padding{padding:10px 8px;}
+.pro-title-padding{padding:5px 15px;}
+.pro-title-description{padding:5px 15px;}
+.pro-button-padding{padding:10px 15px;}
 .pro-title
 {
 	font-size:16px;
@@ -1330,12 +1330,13 @@ video{
     background: #9bcf60;
     text-align: center;
     line-height: 32px;
+        margin-top: -2px;
 }
 .pro-price-text{color:#fff;font-size:15px;}
 .p-left
 {
 	padding-left: 0px;
-    padding-right: 7px;
+    padding-right:0px;
 }
 .plus-icon-color
 {
