--- a/css/theme-default/materialadmin.css
+++ b/css/theme-default/materialadmin.css
@@ -11615,6 +11615,11 @@ xcustom form elements
 .c-cursor{cursor:pointer;}
 .buy-icond{display:flex;}
 /* .main-card{height:245px;} */
+.h-my-p
+{
+	border-radius: 10px;
+    height: 390px;
+}
  .testdisable{background-color: #808797;}.anly:hover{background-color: #fff;}.dropbtn{background-color: #ff9800; color: white; padding: 10px 20px 10px 20px; font-size: 12px; border: none; border-radius: 25px; line-height: 20px; margin: 14px 0 0 0;}.dropdown{position: relative; display: inline-block;}.dropdown-content{display: none; position: absolute; min-width: 160px; box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); z-index: 1;}.dropdown-content a{color: black; background: #fff; padding: 12px 16px; text-decoration: none; display: block;}.dropdown-content a:hover{background-color: #ddd}.dropdown:hover .dropdown-content{display: block;}.dropdown:hover .dropbtn{background-color: #ff9800;}
 @media screen and (max-width: 767px) {
 	html,
@@ -11643,6 +11648,13 @@ body {
     margin-right: -22px !important;
 }
 .buy-icond{display:flex;padding-left:12px;}
+.mtmobile-10{margin-top:10px;}
+.h-my-p
+{
+	border-radius: 10px;
+    height: 590px;
+}
+
 }
 /*media 767 End Here ****/
 /*media for ipad only****/
@@ -11676,6 +11688,12 @@ body {
 }
 .dropdown{float:right;}
 .buy-icond{display:flex;padding-left:12px;}
+.mtmobile-10{margin-top:10px;}
+.h-my-p
+{
+	border-radius: 10px;
+    height: 395px;
+}
 }
 /*media for ipad Pro only****/
 @media only screen and (min-device-width: 1024px) and (max-device-width: 1200px) {
@@ -11729,7 +11747,7 @@ body {
 }
     .cf-cross-button-left-00{margin: -33% -3% 0% 0%;}
   .section-head {
- margin-bottom:30px;
+ margin-bottom:10px;
  text-align: center;
     height: 35px;
 }
@@ -11747,7 +11765,7 @@ text-center
 .wt-separator {
  display:inline-block;
  height:3px;
- width:50px;
+ width:30px;
  position:relative;
 }
 .acc-bg-primary a {
