--- a/css/shortcodes/footer.css
+++ b/css/shortcodes/footer.css
@@ -1,40 +1,29 @@
 /*------------------------------------------------------------------
 Footer
 -------------------------------------------------------------------*/
-  
 .footer h2 {
     margin-bottom: 24px;
 }
 .footer p {
     color: #c9f0ff;
-	font-size: 14px;
 }
 
 .footer-one .primary-footer {
-    padding-top:25px;
-    /* padding-bottom: 50px; */
-	border-top:1px solid rgb(211, 211, 211);
+    padding-top: 80px;
+    padding-bottom: 50px;
 }
 .secondary-footer {
-    padding: 15px 0;
-	text-align: center;
+    padding: 27px 0;
 }
 
 .copy-text a{
-    color: rgb(229, 229, 229);
+    color: #fff;
 }
 .copy-text,
 .copy-text a:hover{
     color: #81ddff;
 }
-.footer-bg
-{
-	width: 100%;
-    height:auto;
-    background-image: url('../../img/footer-bg.jpg');
-    background-size:cover;
-     
-}
+
 /*
 Back To Top
 ----------------------------------------------------*/
@@ -94,27 +83,24 @@ Social Link Widget
 /* 
 Important Link Widget
 ------------------------------------------------ */
-.black-text{font-weight:600;}
 .footer-list {
     padding: 0;
     margin: 0;
     list-style: none;
-	margin-bottom: 30px;
 }
 .footer-list li {
-    /* border-bottom: 1px solid rgba(255, 255, 255, 0.25); */
-	font-size: 14px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.25);
 }
 .footer-list li:last-child {
     border-bottom: 0;
 }
 .footer-list li a {
     display: block;
-    line-height:38px;
+    line-height: 45px;
     color: #c9f0ff;
 }
 .footer-list li a:hover {
-    color: black;
+    color: #fff;
 }
 
 
@@ -218,13 +204,8 @@ Tag Cloud Widget
 
 @media (max-width: 991px) {
     .footer .widget {
-        margin-bottom:10px;
+        margin-bottom: 50px;
     }
-	.footer-list li a {
-    
-    line-height: 25px;
-     
-}
 }
 
 
@@ -372,7 +353,6 @@ Footer 4
     .footer-intro p {
         width: 100%;
     }
-	.alignCenter{text-align:center;}
 }
 
 
