--- a/css/shortcodes/header.css
+++ b/css/shortcodes/header.css
@@ -54,30 +54,22 @@ Top Bar
 .menuzord .menuzord-menu>li.active>a>i,
 .menuzord .menuzord-menu>li:hover>a,
 .menuzord .menuzord-menu>li:hover>a>i{
-    color:#1190e8 !important;
-	font-weight: 600;
-	border-bottom: 3px solid #1190e8;
+    color: #03a9f4 !important;
 }
- 
- 
-.menuzord .menuzord-menu>li:hover>a.btn
-{
-   color:rgb(255, 255, 255) !important;
-	font-weight: 600;
-}
+
 .nav-border-bottom .menuzord .menuzord-menu>li.active>a,
 .nav-border-bottom .menuzord .menuzord-menu>li:hover>a {
-     
+    border-bottom: 3px solid #03a9f4;
 }
 
 .nav-border-box .menuzord-menu > li.active > a,
 .nav-border-box .menuzord-menu > li:hover > a{
-    
+    border:1px solid #03a9f4;
 }
 
 .nav-boxed-color .menuzord-menu > li.active > a,
 .nav-boxed-color .menuzord-menu > li:hover > a{
-    background: #1190e8 ;
+    background: #03a9f4 ;
 }
 
 
@@ -119,7 +111,16 @@ Header
     position: relative;
 }
 
-
+.mt-35 {
+    margin-top:18px;
+}
+.tt-nav.sticky button
+{
+	 margin-top:15px;
+}
+.tt-nav .sticky .menuzord-menu li .mt-35 {
+    margin-top:10px;
+}
 .tt-nav.sticky .header-sticky,
 .tt-nav.transparent-header {
     position: fixed;
@@ -144,13 +145,13 @@ Header
 
 
 .tt-nav .logo-brand img {
-    height: 100%;
+    height: 40px;
     float: left;
 }
 
 .tt-nav.sticky .logo-brand img, 
 .tt-nav.sticky .logo-brand img.retina  {
-    height: 100%!important;
+    height: 30px !important;
 }
 
 
@@ -164,13 +165,12 @@ Header
 #header.transparent-header .light-header,
 #header.transparent-header .dark-header,
 #header.transparent-header {
-    background: white !important;
+    background: transparent !important;
     z-index: 1050;
 }
 
 #header.transparent-header .menuzord .logo-brand {
     z-index: 1200;
-	transition: all 0.3s ease-out;
 }
 
 
@@ -198,7 +198,7 @@ Header
 
 .tt-nav .brand-header,
 .tt-nav.sticky .brand-header {
-    background: #1190e8 !important;
+    background: #03a9f4 !important;
 }
 
 
@@ -222,9 +222,9 @@ header.sticky .menuzord-menu>li>a,
 .tt-nav .sticky,
 .tt-nav li.nav-icon i,
 .tt-nav.sticky li.nav-icon i {
-    -webkit-transition: all 0.3s ease-out;
-    -moz-transition: all 0.3s ease-out;
-    transition: all 0.3s ease-out;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    transition: all 0.3s ease;
 
 }
 
@@ -235,11 +235,11 @@ header.sticky .menuzord-menu>li>a,
 }
 
 .menuzord-menu>li>a {
-    line-height: 75px;
+    line-height: 100px;
 }
 
 .nav-border-bottom .menuzord-menu>li>a {
-    line-height:70px;
+    line-height: 70px;
 }
 
 .tt-nav.sticky .menuzord-menu>li>a {
@@ -248,17 +248,9 @@ header.sticky .menuzord-menu>li>a,
 
 .menuzord-menu>li>a,
 .tt-nav.sticky .menuzord-menu>li>a {
-    padding: 0 5px;
+    padding: 0 12px;
 }
- 
-.tt-nav.sticky .menuzord-menu .btn-sm-merit
-{
-	margin-top:14px !important;
-}
-.tt-nav.sticky .menuzord-menu .btn-sm-scholar
-{
-	margin-top:14px !important;
-}
+
 .menuzord-menu ul.dropdown li a,
 .menuzord-menu>li>.megamenu a,
 .menuzord-menu>li>.megamenu h5,
@@ -288,7 +280,6 @@ header.sticky .menuzord-menu>li>a,
     width: 100%;
     float: left;
     position: relative;
-	margin-left: 15px;
 }
 .menuzord a,
 .menuzord-menu ul.dropdown li a {
@@ -307,7 +298,7 @@ header.sticky .menuzord-menu>li>a,
     font-size: 24px;
     font-weight: 700;
     cursor: pointer;
-    margin: 25px 30px 0 0;
+    margin: 18px 30px 0 0;
     line-height: 100px;
 }
 .tt-nav.sticky .logo-brand {
@@ -318,7 +309,7 @@ header.sticky .menuzord-menu>li>a,
 .menuzord-menu {
     margin: 0;
     padding: 0;
-    float: left;
+    float: right;
     list-style: none
 }
 .menuzord-menu.menuzord-right {
@@ -334,8 +325,8 @@ header.sticky .menuzord-menu>li>a,
 .menuzord-menu>li>a {
     display: inline-block;
     text-decoration: none;
-    font-size: 14px;
-    font-weight: 600;
+    font-size: 16px;
+    font-weight: normal;
     outline: 0;
     -webkit-tap-highlight-color: transparent
 }
@@ -344,40 +335,37 @@ header.sticky .menuzord-menu>li>a,
 .menuzord-menu>li>a,
 .menuzord-menu>li>a>i,
 .dark.menuzord-menu>li>a {
-    color: rgb(20, 21, 23);
+    color: #202020;
 }
 
 .light.menuzord-menu>li>a,
 .light.menuzord-menu>li>a>i,
 .transparent-header.sticky .semi-transparent .menuzord-menu>li>a,
 .transparent-header.sticky .semi-transparent .menuzord-menu>li>a>i {
-    color: rgb(20, 21, 23);
+    color: #fff;
 }
 
 .transparent-header.sticky .menuzord-menu>li>a,
 .transparent-header.sticky .menuzord-menu>li>a>i {
-    color: rgb(20, 21, 23);
+    color: #202020;
 }
 
 
 .menuzord-menu>li.active>a,
 .menuzord-menu>li:hover>a {
-    color: gray;
+    color: #202020
 }
 .menuzord-menu ul.dropdown,
 .menuzord-menu ul.dropdown li ul.dropdown {
     list-style: none;
     margin: 0;
-    margin-left: -55px;
-    margin-top: 15px;
     padding: 0;
-    display: block;
+    display: none;
     position: absolute;
     z-index: 99;
     min-width: 190px;
     white-space: nowrap;
     background: #fff;
-    border-radius:10px;
     -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
     box-shadow: 0 6px 12px rgba(0,0,0,.175);
 }
@@ -385,17 +373,7 @@ header.sticky .menuzord-menu>li>a,
     left: 100%;
 }
 
-.menuzord-menu ul.dropdown:before {
-    position: absolute;
-    display: inline-block;
-    content: '';
-    top: -15px;
-    border-right: 10px solid transparent;
-    border-left: 10px solid transparent;
-    border-bottom: 15px solid #fff;
-    right: 25px;
-    margin-right: 65px;
-}
+
 .menuzord-menu ul.dropdown li {
     clear: both;
     width: 100%;
@@ -428,7 +406,7 @@ header.sticky .menuzord-menu>li>a,
     bottom: 0;
     width: 0;
     height: 1px;
-    background-color: transparent;
+    background-color: #03a9f4;
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
     -o-transition: all 0.3s;
@@ -444,11 +422,8 @@ header.sticky .menuzord-menu>li>a,
 .menuzord-menu ul.dropdown li.active>a,
 .menuzord-menu>li>.megamenu .megamenu-row li:hover>a,
 .menuzord-menu>li>.megamenu .megamenu-row li.active>a {
-    color: #1190e8;
-    background-color:transparent;
-	 
-
-	
+    color: #03a9f4;
+    background-color: #fafafa;
 }
 .menuzord-menu>li>.megamenu .megamenu-row li a {
     padding: 8px 20px;
@@ -707,7 +682,7 @@ Nav link boxed
 .nav-boxed-color .menuzord .menuzord-menu>li:hover>a,
 .nav-boxed-color .menuzord .menuzord-menu>li:hover>a>i {
     color: #fff !important;
-    background: #1190e8;
+    background: #03a9f4;
 }
 
 .brand-header .menuzord .menuzord-menu>li.active>a,
@@ -757,11 +732,30 @@ Nav link border box
 .tt-nav.sticky .nav-border-box .menuzord-menu > li > a {
     margin: 15px 0;
 }
-
-
+.onMobilev{height:20px;}
+.mobile-view{display:none !important;}
+.regClose
+{
+    float: right;
+    margin-right: 3px;
+    display: block;
+    height: 17px;
+    width: 23px;
+    background: red;
+    line-height: 16px;
+    margin-top: 3px;
+    border-radius: 25px;
+    color: black;
+	display:none;
+}
 @media (max-width: 768px) {
     .nav-border-box .menuzord-menu > li > a {
         margin: 5px 0;
+    }
+	.mobile-view{display:block !important;}
+	.regClose
+    {
+	 display:block;
     }
 }
 
@@ -886,8 +880,9 @@ Responsive Menu
         padding: 0
     }
     .menuzord-responsive .logo-brand {
-        margin: 8px 0 0;
+        margin: 5px 0 5px;
         line-height: inherit;
+		width:85%;
     }
     .tt-nav.sticky .logo-brand {
         margin: 8px 0 0;
@@ -898,7 +893,7 @@ Responsive Menu
     }
 
     .has-header-search .menuzord-responsive .showhide {
-        margin-right: 40px;
+        margin-right: 5px;
     }
 
     .menuzord-responsive .menuzord-menu {
@@ -918,33 +913,19 @@ Responsive Menu
         display: block;
         position: relative
     }
-	.menuzord-responsive .menuzord-menu .btn-sm-merit {
-       line-height:25px;
-    }
     .menuzord-responsive .menuzord-menu>li>a {
         width: 100%;
         padding: 12px 20px;
         display: block;
         border-bottom: 1px solid rgba(0, 0, 0, 0.03);
     }
-	.menuzord-responsive .menuzord-menu>li>a.btn-sm-merit {
-        width:40%;
-		margin-bottom:20px;
-		line-height:10px !important;
-         
-    }
-	.menuzord-responsive .menuzord-menu>li>a.btn-sm-scholar {
-         width:40%;
-         line-height:10px !important;
-    }
     .menuzord-responsive .menuzord-menu>li:first-child>a {
         border-top: 1px solid rgba(0, 0, 0, 0.03);
     }
     .menuzord-responsive .menuzord-menu ul.dropdown,
     .menuzord-responsive .menuzord-menu ul.dropdown li ul.dropdown {
-        width: 90%;
+        width: 100%;
         left: 0;
-		margin-left: 15px;
         position: relative;
         border: none;
         background: #fff;
@@ -1137,12 +1118,12 @@ Responsive Menu
     .nav-border-bottom .menuzord .menuzord-menu>li:hover>a,
     .nav-border-bottom .brand-header .menuzord .menuzord-menu>li.active>a,
     .nav-border-bottom .brand-header .menuzord .menuzord-menu>li:hover>a {
-        border-bottom: 1px solid #1190e8;
+        border-bottom: 1px solid #03a9f4;
     }
     .brand-header .menuzord .menuzord-menu>li:hover>a,
     .brand-header .menuzord .menuzord-menu>li.active>a,
     .brand-header .menuzord .menuzord-menu>li.active>a i {
-        color: #1190e8 !important;
+        color: #03a9f4 !important;
     }
 
 }
@@ -1166,9 +1147,8 @@ Alter logo visiblity
 }
 
 @media screen and (max-width: 768px) {
-    .transparent-header .logo-dark{
+    .transparent-header .logo-dark {
         display: inline;
-		width: 100%;
     }
     .transparent-header .logo-light {
         display: none;
