--- a/css/shortcodes/portfolio.css
+++ b/css/shortcodes/portfolio.css
@@ -20,17 +20,7 @@ Portfolio
 /*
 Default Portfolio Hover
 -----------------------------------------------------------------*/
-.portfolio-wrapper
-{  
-    border-radius:5px;
-    background-color: rgb(255, 255, 255);
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-    text-align: center;
-    padding:10px 0px;
-    height: 100%; 
-	cursor:pointer;
-	background: linear-gradient(to right, rgb(27, 31, 38), rgb(64, 62, 74)); 
-}
+
 .portfolio-wrapper .bg-overlay {
     position: absolute;
     bottom: -200px;
@@ -54,10 +44,13 @@ Default Portfolio Hover
 }
 
 .portfolio-wrapper:hover .bg-overlay {
-    -webkit-transform:scale(1.05);
-    -ms-transform:scale(1.05);
-    -o-transform:scale(1.05);
-    transform:scale(1.05)
+    right: 0;
+    bottom: 0;
+    -webkit-transform: scale(10) translateZ(0);
+    -moz-transform: scale(10) translateZ(0);
+    -ms-transform: scale(10) translateZ(0);
+    -o-transform: scale(10) translateZ(0);
+    transform: scale(10) translateZ(0);
 }
 
 
@@ -204,7 +197,6 @@ Portfolio Filter
     margin:0;
     padding: 0;
     list-style: none;
-	text-align: center;
 }
 
 .portfolio-filter li {
@@ -233,7 +225,7 @@ Portfolio Filter
 /*Preset Color*/
 .brand-filter li:hover,
 .brand-filter li.active {
-    background-color: #1190e8;
+    background-color: #03a9f4;
 }
 
 
@@ -249,8 +241,7 @@ Portfolio with title
     transition: box-shadow 0.3s;
 }
 .portfolio-with-title .portfolio-wrapper:hover {
-    
-	box-shadow: 0px 0px 47px 3px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 .portfolio-with-title .portfolio-wrapper:hover .portfolio-title {
     border: 1px solid transparent;
